changelog is its own page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,8 @@
     <br />(Create and delete publish tokens)
   </div>
   {{> documentation}}
-  {{> changelog}}
+  <p>
+    For information on new features, bugs fixes, and potential breaking changes please see the <a href="/changelog">changelog</a>.
+  </p>
 </article>
 <script src="/app.js"></script>
