feat: support monorepos with release-backed tokens
Allows release-backed tokens to be generated with a monorepo option
if monorepo is enabled, release-backed tokens will look for matching
releases that contain the package-name suffix, e.g., yargs-v1.0.0
sql-v1.0.2, rather than just v1.0.0, v1.0.2.

--- a/views/token-settings.hbs
+++ b/views/token-settings.hbs
@@ -26,6 +26,12 @@
     <form id="release-token" action="/_/token">
       <input type="hidden" value="release" name="type" />
       <input class="ott" type="hidden" name="ott" value="" />
+      <br />
+      <label for="monorepo">
+        Is this token for a monorepo?
+      </label>
+      <input type="checkbox" name="monorepo" id="monorepo-input" />
+      </br>
       <button>Create release-backed publication token</button>
     </form>
   </div>
